# LoRa-Meshtastic-OSM-notes-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MESSAGE_FORMAT.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: API.md  EXAMPLES.md  SECURITY.md  TIME_CONFIGURATION.md  TROUBLESHOOTING.md  spec.md
locale/en/LC_MESSAGES/: lora-osmnotes.mo  lora-osmnotes.po
locale/es/LC_MESSAGES/: lora-osmnotes.mo  lora-osmnotes.po
scripts/: configurar_bluetooth.md  deshabilitar_bluetooth.sh  detect_serial.sh  fix_service_user.sh  habilitar_bluetooth.sh  install_pi.sh  verificar_techo_config.py
src/gateway/: __init__.py  __main__.py  cli.py  commands.py  config.py  database.py  geocoding.py  main.py  meshtastic_serial.py  notifications.py  osm_worker.py  position_cache.py
systemd/: lora-osmnotes.service
tests/: test_commands.py  test_commands_edge_cases.py  test_database.py  test_database_edge_cases.py  test_notifications.py  test_osm_worker.py  test_position_cache.py  test_time_correction.py
